<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.visionstech.scoreboardcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/main_margin_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/fam"
                android:text="@string/team_a_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zero"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="60sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="@dimen/main_margin_bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/fam"
                    android:text="@string/cards"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/card_background"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_a_yellow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/yellow_text_background"
                        android:fontFamily="@font/fam"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/zero"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_a_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/red_text_background"
                        android:fontFamily="@font/fam"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/zero"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </RelativeLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/fam"
                android:onClick="addGoalA"
                android:text="@string/goal"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/fam"
                android:onClick="addYellowCardA"
                android:text="@string/yellow_card"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/fam"
                android:onClick="addRedCardA"
                android:text="@string/red_card"
                android:textColor="#fff"
                android:textSize="15sp" />
        </LinearLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/fam"
                android:text="@string/team_b_label"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zero"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="60sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="@dimen/main_margin_bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/fam"
                    android:text="@string/cards"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/card_background"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/team_b_yellow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/yellow_text_background"
                        android:fontFamily="@font/fam"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/zero"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/team_b_red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/red_text_background"
                        android:fontFamily="@font/fam"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/zero"
                        android:textColor="#fff"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </RelativeLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/fam"
                android:onClick="addGoalB"
                android:text="@string/goal"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/fam"
                android:onClick="addYellowCardB"
                android:text="@string/yellow_card"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/fam"
                android:onClick="addRedCardB"
                android:text="@string/red_card"
                android:textColor="#fff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/main_margin_bottom"
        android:background="@drawable/button_background"
        android:fontFamily="@font/fam"
        android:onClick="resetScore"
        android:text="@string/reset"
        android:textColor="#fff"
        android:textSize="20sp" />
</RelativeLayout>
